<resources>
    <string name="app_name">AtividadeAvaliativa4</string>
    <string name="txt_name">Nome</string>
    <string name="txt_email">E-mail</string>
    <string name="txt_cpf">CPF</string>
    <string name="txt_tel">Telefone/Celular</string>
    <string name="txt_address">Endereço</string>
    <string name="txt_city">Cidade</string>
    <string name="btn_save">Salvar</string>
</resources>